New Project Added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
     <nav>
         <ul>
-        <li>My Portfolio</li>
-        <li>Projects</li>
-        <li>Who is Rosa?</li>
-        <li>Contact me</li>
+        <li><a href=""> My Portfolio</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="">Who is Rosa?</a></li>
+        <li><a href="">Contact me</a></li>
         </ul>
     </nav>
     
