Link to the Project

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     
     <main>
         <H1>Hey! Look at my Projects</H1>
-        <p><a href="/bbc.html">BBC News</a></p>
+        <p><a href="BBC_News_Project/bbc.html">BBC News</a></p>
     </main>
 
 </body>
