--- a/BBC_News_Project/bbc.html
+++ b/BBC_News_Project/bbc.html
@@ -9,11 +9,11 @@
     <body>
     <nav>
         <ul>
-            <li><a href="bbc.html" class="logo">BBC NEWS</a></li>
+            <li><a href="bbc.html" class="scaled logo">BBC NEWS</a></li>
             <div class="right">
-            <li><a href="flexbox2.html" class="flexbox">Flexbox</a></li>
-            <li><a href="grid.html" class="gridnav">Grid</a></li>
-            <li><a href="position.html" class="position">Position</a></li>
+            <li><a href="flexbox2.html" class="scaled flexbox">Flexbox</a></li>
+            <li><a href="grid.html" class="scaled gridnav">Grid</a></li>
+            <li><a href="position.html" class="scaled position">Position</a></li>
             </div> 
         </ul> 
     </nav>
