--- a/BBC_News_Project/bbc.html
+++ b/BBC_News_Project/bbc.html
@@ -9,7 +9,7 @@
     <body>
     <nav>
         <ul>
-            <li><a href="bbc.html" class="scaled logo">BBC NEWS</a></li>
+            <li><a href="/index.html" class="scaled logo">BBC NEWS</a></li>
             <div class="right">
             <li><a href="flexbox2.html" class="scaled flexbox">Flexbox</a></li>
             <li><a href="grid.html" class="scaled gridnav">Grid</a></li>
