--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ethereallist's Portfolio</title>
+    <title>Ethereallist's Portfolio</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
