--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Projects</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Projects</title>
 </head>
 <body>
     <nav>
