--- a/Who_Is_Rosa.html
+++ b/Who_Is_Rosa.html
@@ -14,7 +14,11 @@
         </ul>
     </nav>
     <main>
-
+        <H1>Hey! Look at my Portfolio</H1>
+        <p>I have some new projects I want to show you! But let's start from the beggining...</p>
+        <h2>Who am I?</h2>
+        <p>Nice to meet you! My name is <b>Rosa Rosales</b> and I am a self-taught programmer from Venezuela.</p>
+        <p>My biggest dream is to become a programmer for a big company and create useful proyects that many people can use for a great purpose.</p>
     </main>
 
 </body>
