--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethereallist's Portfolio</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
     <nav>
         <ul>
+        <header>
+        <h2>Ethereallist</h2>
+        </header>
         <li><a href=""> My Portfolio</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="">Who is Rosa?</a></li>
@@ -16,6 +21,9 @@
     <main>
 
     </main>
+    <aside>
+        <button>hola</button>
+    </aside>
 
 </body>
 
