--- a/BBC_News_Project/bbc.html
+++ b/BBC_News_Project/bbc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="BBC_News-Logo.wine.png" sizes="32x32">
     <title>Inicio</title>
