--- a/Who_Is_Rosa.html
+++ b/Who_Is_Rosa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethereallist's Portfolio</title>
     <link rel="stylesheet" href="main.css">
@@ -24,3 +25,4 @@
 </body>
 
 </html>
+
