--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethereallist's Portfolio</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/png" href="Background_Images/icon.png" sizes="32x30">
 </head>
 <body>
 
