--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
     </main>
     <aside>
-        <button>hola</button>
+        selecciona un tema
+        <button>Bees</button>
+        <button>Aesthetic</button>
+        <button>Classic</button>
+        <button>Artistic</button>
     </aside>
 
 </body>
