--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Ethereallist's Portfolio</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="Background_Images/icon.png" sizes="32x30">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 
