--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
-    
 </head>
 <body>
 
     <nav>
         <ul>
-        <header>
         <h2>Ethereallist</h2>
-        </header>
         <li><a href="My_Portfolio.html"> My Portfolio</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="Who_Is_Rosa.html">Who is Rosa?</a></li>
         <li><a href="Contact_Me.html">Contact me</a></li>
         </ul>
     </nav>
-    <main>
-        <section class="space">
-        selecciona un tema
-        <button>Bees</button>
+    <div class="backgroundgrid">
+    <div class="styles">
+        <button>B</button>
         <button>Aesthetic</button>
         <button>Classic</button>
         <button>Artistic</button>
-        <button><a href="My_Portfolio.html">Ir al siguiente</a></button>
+        <button class="asidebutton"><a href="My_Portfolio.html" class="next">Ir al siguiente</a></button>
+    </div>
+    </div>
+    <main>
+        <section class="space">
+
         </section>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Quis viverra nibh cras pulvinar mattis. Felis imperdiet proin fermentum leo. Condimentum lacinia quis vel eros donec. Nisi vitae suscipit tellus mauris a diam maecenas. Sit amet nulla facilisi morbi. Integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus. Ornare quam viverra orci sagittis eu volutpat odio facilisis mauris. Ut ornare lectus sit amet. Lobortis feugiat vivamus at augue eget arcu dictum varius. Eget duis at tellus at urna condimentum. Eu facilisis sed odio morbi. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Ante metus dictum at tempor commodo ullamcorper.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Quis viverra nibh cras pulvinar mattis. Felis imperdiet proin fermentum leo. Condimentum lacinia quis vel eros donec. Nisi vitae suscipit tellus mauris a diam maecenas. Sit amet nulla facilisi morbi. Integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus. Ornare quam viverra orci sagittis eu volutpat odio facilisis mauris. Ut ornare lectus sit amet. Lobortis feugiat vivamus at augue eget arcu dictum varius. Eget duis at tellus at urna condimentum. Eu facilisis sed odio morbi. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Ante metus dictum at tempor commodo ullamcorper.</p>
